[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/ui/splash/mnmm_logo_animated/anim_transition_move_logo_down.tres" type="Animation" id=1]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/anim_idle_wobble.tres" type="Animation" id=2]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/mnmm_idv2_768px_sans_title.png" type="Texture" id=3]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/shield_logo_fire_particle_trail.png" type="Texture" id=4]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/mnmm_idv2_768px_title_only.png" type="Texture" id=5]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/mnmm_logo_idle.gd" type="Script" id=6]
[ext_resource path="res://src/ui/splash/mnmm_logo_animated/anim_transition_fly_logo_up.tres" type="Animation" id=7]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.217857, 0.555556 )
colors = PoolColorArray( 1, 1, 1, 0.607843, 1, 1, 1, 0.392157, 1, 1, 1, 0 )

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.75
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0980392 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Margin/Center/LogoTexture/FlameParticleTrail:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0980392 ), Color( 1, 1, 1, 0.0196078 ) ]
}

[node name="MNMM_Idle_LogoAnim" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 6 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 960, 540 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="Margin"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogoTexture" type="TextureRect" parent="Margin/Center"]
margin_left = 576.0
margin_top = 156.0
margin_right = 1344.0
margin_bottom = 924.0
rect_pivot_offset = Vector2( 384, 499 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )

[node name="SpriteTitleOnly" type="Sprite" parent="Margin/Center/LogoTexture"]
position = Vector2( 374, 469 )
texture = ExtResource( 5 )

[node name="FlameParticleTrail" type="CPUParticles2D" parent="Margin/Center/LogoTexture"]
show_behind_parent = true
position = Vector2( 385, 525.409 )
amount = 150
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 32.0
flag_align_y = true
direction = Vector2( 0, 1 )
spread = 10.0
initial_velocity = 850.0
scale_amount = 15.0
scale_amount_random = 0.15
color_ramp = SubResource( 1 )

[node name="AnimationIdle" type="AnimationPlayer" parent="."]
autoplay = "wobble"
playback_speed = 0.5
anims/wobble = ExtResource( 2 )

[node name="AnimationTransition" type="AnimationPlayer" parent="."]
anims/fly_logo_up = ExtResource( 7 )
anims/move_logo_down = ExtResource( 1 )

[node name="AnimationFade" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 2 )

[connection signal="animation_finished" from="AnimationTransition" to="." method="_on_AnimationTransition_animation_finished"]
[connection signal="animation_finished" from="AnimationFade" to="." method="_on_AnimationFade_animation_finished"]
